--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -265,16 +265,19 @@
                   <div class="ml-auto btnspart  grid mt-3">
                     <button  style="margin: 10px;"  pButton label="Produit non existant" pRipple type="button"
                       class="col p-button p-button-nouveau p-component" (click)="showProductAddForm()"></button>
-                    
+                      <button style="margin: 10px;"  pButton pRipple label="Ajouter"
+                      [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].value <= 0" type="button"
+                      class="col p-button-saved p-button p-component"
+                      (click)="firstSaveForDetail(detailPurchasesForms[detailPurchasesForms.length-1])"></button>
                     <button  style="margin: 10px;"  pButton pRipple label="Annuler" type="reset"
                       class="col p-button-annuler p-button p-component " (click)="showAddProductForm()"></button>
                   </div>
                 </div>
                 <div class="ml-auto btnspart  grid mt-3">
-                  <button pButton pRipple label="Ajouter"
-                      [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].value <= 0" type="button"
-                      class="col p-button-saved p-button p-component"
-                      (click)="firstSaveForDetail(detailPurchasesForms[detailPurchasesForms.length-1])"></button>
+                  <button pButton label="Enregistrer" type="submit"
+                  [loading]="loading" class="p-button-orange"
+                  [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
+  
                 </div>
                 
                 <!-- List of created product-->
@@ -341,10 +344,7 @@
 
               <p class="divider-b"></p>
 
-              <button pButton label="Terminer la saisie de mon nouvel approvisionnement" type="submit"
-                [loading]="loading" class="p-button-orange"
-                [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
-
+              
             </div>
             <!--<div class="col mt-10 p-5">
           <h5>Produit non trouvé ?</h5>
