--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -140,7 +140,7 @@
               <!-- Ligne 2 -->
               <div class="information">
                 <div class="form-group" style="flex: 1;">
-                  <label for="label">Adresse :</label>
+                  <label for="label">Code postal :</label>
                   <div class="input-container">
                     <input type="text" name="label" id="label"  required
                       [(ngModel)]="adresseS.label" noWhitespace #labelInput="ngModel"
