--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -113,8 +113,7 @@
 
               <div class="field col-2">
                 <label htmlFor="datePurchase">Date </label>
-                <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase" [showTime]="true"
-                  [showSeconds]="true"></p-calendar>
+                <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase"></p-calendar>
               </div>
 
               <div class="field col-5">
