--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -95,9 +95,9 @@
         </div>
       </div>
 
-      <!-- Informations Personnelles -->
+      <!-- Adresse du Fournisseur -->
       <fieldset>
-        <legend>Informations Personnelles</legend>
+        <legend>Adresse du Fournisseur</legend>
 
         <div class="row">
           <div class="col-lg-8">
@@ -198,7 +198,7 @@
 
       <div class="row">
         <fieldset>
-          <legend>Informations Personnelles</legend>
+          <legend>Adresse du Fournisseur</legend>
   
           <div class="row">
             <div class="col-lg-8">
