--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -97,311 +97,10 @@
 
     </div>  
 
-    <p-dialog [(visible)]="dialogAddCourse" [baseZIndex]="1000000" 
+    <!-- <p-dialog [(visible)]="dialogAddCourse" [baseZIndex]="1000000" 
     [style]="{width: '850px'}" header="Modification du Camion" [modal]="true" class="p-fluid">
-      <div class="">
-        <form class="grid newform " #f="ngForm" (ngSubmit)="save()">
-          <div class="col-12 card p-fluid">
-            <!--<h5>Ajouter un nouveau Approvisionnement</h5>-->
-
-            <div class="grid p-3  entete bg-primary">
-
-              <!--<div class="field">
-            <label htmlFor="reference">Reference</label>
-            <input pInputText id="reference" [(ngModel)]="reference" name="reference" type="text" placeholder="Reference Approvisionnement" required/>
-          </div>-->
-
-              <div class="field col-2">
-                <label htmlFor="datePurchase">Date </label>
-                <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase"></p-calendar>
-              </div>
-
-              <div class="field col-5">
-                <label htmlFor="shop">Boutique</label>
-                <p-dropdown [options]="shops" optionLabel="name" name="shop" [(ngModel)]="shop"
-                  (onChange)="changeShop()">
-                  <ng-template let-shop pTemplate="item">
-                    <div class="flex align-items-center operatingSystems-item">
-                      <div> {{shop.name}}({{shop?.addressPrincipale?.label}})</div>
-                    </div>
-                  </ng-template>
-
-                </p-dropdown>
-              </div>
-
-              <!--s<div class="field col-3">
-            <label htmlFor="addresse">Adresse</label>
-            <p-dropdown [options]="addresss"   name="addresse" [(ngModel)]="address" >
-              <ng-template let-addresss pTemplate="item">
-                <div class="flex align-items-center operatingSystems-item">
-                  <div> {{addresss.label}}</div>
-
-                </div>
-              </ng-template>
-            </p-dropdown>
-          </div>-->
-
-              <!--<div class="grid col">-->
-              <div class="col-3">
-                <div class="field">
-                  <label htmlFor="montant">Montant</label>
-                  <p-inputNumber mode="decimal" [disabled]="true" [minFractionDigits]="2" name="montant" id="montant"
-                    [(ngModel)]="montant" [showButtons]="true" [min]="0"></p-inputNumber>
-                </div>
-              </div>
-
-              <div class="col-2">
-                <div class="field ">
-                  <label htmlFor="currency">Devise</label>
-                  <p-dropdown [options]="currencys" optionLabel="name" name="currency"
-                    [(ngModel)]="usercurrency"></p-dropdown>
-                </div>
-              </div>
-              <!--</div>-->
-
-            </div>
-            <p class="divider mt-4"></p>
-            <p class="divider"></p>
-
-            <!--Partit produit-->
-            <div class="mb-2 mt-1">
-              
-
-
-
-              <!--Formulaire d'ajout-->
-              <h3>Saisie nouvel achat de produit </h3>
-              <div class="cardnew mt-5">
-                <form class="p-fluid  ">
-                  <div class="grid">
-
-                    <div class="col-3">
-                      <div class="field ">
-                        <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>
-                        <!--<p-dropdown [options]="categorys" optionLabel="name" [(ngModel)]="category" name="categoty"  (ngModelChange)="getProductCategory(category)"></p-dropdown>-->
-                        <p-dropdown [filter]="true" filterBy="name" [options]="products" optionLabel="name"
-                          name="product{{detailPurchasesForms.length-1}}"
-                          [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product"
-                          (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)">
-                          <ng-template let-product pFilter="product.category.name" pTemplate="item">
-                            <div class="flex align-items-center operatingSystems-item">
-                              <div>{{product.name}} ({{product.category.name}} / {{product?.conditioning?.name}})
-                              </div>
-                            </div>
-                          </ng-template>
-                        </p-dropdown>
-                      </div>
-                    </div>
-                    <div (click)="showDialogSelect()" style="margin-top: 5px; margin-left: -5px;" class="col-1">
-                      <button pButton pRipple icon="pi pi-filter-fill" style="margin-top: 20px;"
-                        class="p-button-rounded p-button-primary mr-2"></button>
-                    </div>
-                    <!--<div class="col-3">
-                   <div class="field ">
-                     <label htmlFor="product{{detailPurchasesForms.length-1}}">Produit</label>-->
-                    <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}" [(ngModel)]="detail.product" (ngModelChange)="changeProduct(detail.product,i)">
-                       <ng-template let-product pFilter="product.category.name" pTemplate="item" >
-                         <div class="flex align-items-center operatingSystems-item">
-                           <div>{{product.name}} ({{product.category.name}})</div>
-                         </div>
-                       </ng-template>
-                     </p-dropdown>-->
-                    <!--<p-dropdown [options]="products"  optionLabel="name" name="product{{detailPurchasesForms.length-1}}"  [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].product" (ngModelChange)="changeProduct(detailPurchasesForms[detailPurchasesForms.length-1].product,detailPurchasesForms.length-1)"></p-dropdown>->
-                   </div>
-                 </div>-->
-                    <div class="col">
-                      <div class="field">
-                        <label htmlFor="quantity{{detailPurchasesForms.length-1}}">Quantité</label>
-                        <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                          name="quantity{{detailPurchasesForms.length-1}}" id="quantity{i}"
-                          [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].quantity"
-                          (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].quantity,detailPurchasesForms.length-1)"
-                          [showButtons]="true" [min]="0"></p-inputNumber>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="field ">
-                        <label htmlFor="unit{{detailPurchasesForms.length-1}}">Unité</label>
-                        <p-dropdown [options]="units" optionLabel="name" name="unit{{detailPurchasesForms.length-1}}"
-                          [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].unit"
-                          (ngModelChange)="changeUnit(detailPurchasesForms.length-1)"></p-dropdown>
-                      </div>
-                    </div>
-
-
-
-                    <div class="col-2">
-                      <div class="field">
-                        <label htmlFor="totalPrice{{detailPurchasesForms.length-1}}">Prix total</label>
-                        <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                          name="totalPrice{{detailPurchasesForms.length-1}}"
-                          id="totalPrice{{detailPurchasesForms.length-1}}"
-                          [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].totalPrice"
-                          [showButtons]="true" [min]="0"
-                          (ngModelChange)="changeValue(detailPurchasesForms[detailPurchasesForms.length-1].totalPrice,detailPurchasesForms.length-1)"></p-inputNumber>
-                      </div>
-                    </div>
-
-
-                    <div class="col">
-                      <div class="field">
-                        <label htmlFor="price{{detailPurchasesForms.length-1}}">Prix à l'unité</label>
-                        <p-inputNumber mode="decimal" [minFractionDigits]="2"
-                          name="value{{detailPurchasesForms.length-1}}" id="value{i}" [disabled]="true"
-                          [(ngModel)]="detailPurchasesForms[detailPurchasesForms.length-1].value" [showButtons]="true"
-                          [min]="0"></p-inputNumber>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div *ngIf="detailPurchasesForms[detailPurchasesForms.length-1].distinctUnit" class="field">
-                    <label htmlFor="price{{detailPurchasesForms.length-1}}">Quantité réelle : </label>
-                    <label> {{detailPurchasesForms[detailPurchasesForms.length-1].realQuantity}}</label>
-                  </div>
-
-
-
-                </form>
-                <!---->
-                <div class="ml-auto btnspart  grid mt-3">
-                  <button  style="margin: 10px;"  pButton label="Produit non existant" pRipple type="button"
-                    class="col p-button p-button-nouveau p-component" (click)="showProductAddForm()"></button>
-                    <button style="margin: 10px;"  pButton pRipple label="Ajouter"
-                    [disabled]="detailPurchasesForms[detailPurchasesForms.length-1].value <= 0" type="button"
-                    class="col p-button-saved p-button p-component"
-                    (click)="firstSaveForDetail(detailPurchasesForms[detailPurchasesForms.length-1])"></button>
-                  <button  style="margin: 10px;"  pButton pRipple label="Annuler" type="reset"
-                    class="col p-button-annuler p-button p-component " (click)="showAddProductForm()"></button>
-                </div>
-              </div>
-              <div class="ml-auto btnspart  grid mt-3">
-                <button pButton label="Enregistrer" type="submit"
-                [loading]="loading" class="p-button-orange"
-                [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
-
-              </div>
-              
-              <!-- List of created product-->
-              <!-- Liste des produits créés -->
-              <div class="ListProduct">
-                <div class="flex-1 mb-2 mt-4">
-                  <h5>Liste des produits</h5>
-                  <!-- <button  pButton label="Ajouter un produit" type="button" [loading]="loading" class="p-button-newline mt-2" (click)="showAddProductForm()" ></button> -->
-                </div>
-                <p *ngIf="detailPurchasesForms2.length == 0">
-                  Aucun produit pour l'instant ! Veuillez remplir le formulaire pour ajouter un produit.
-                </p>
-
-
-                <div class="divtableau">
-                  
-                  <table class="table" *ngIf="detailPurchasesForms2.length != 0">
-                    <thead>
-                      <tr>
-                        <th>Produit</th>
-                        <th>Catégorie</th>
-                        <th>Conditionnement</th>
-                        <th>Quantité (unité)</th>
-                        <th>Prix/unité</th>
-                        <th>Prix Total</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let detail of detailPurchasesForms2; let i = index">
-                        <td>{{ detail?.product?.name }}</td>
-                        <td>{{ detail?.product?.category?.name }}</td>
-                        <td>{{ detail?.product?.conditioning?.name }}</td>
-                        <td>{{ detail?.quantity }} ({{ detail?.unit?.code }})</td>
-                        <td>{{ detail?.value | number:'1.2-2' }}
-                          /{{ detail?.unit?.code }}</td>
-                        <td>{{ detail?.totalPrice }}</td>
-                        <td>
-                          <button pButton pRipple type="button" icon="pi pi-trash"
-                            class="p-button p-component p-button-text p-button-icon-only"
-                            (click)="confirmDeleteDetail(detail, i)"></button>
-                        </td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-
-
-
-
-
-
-
-
-
-            </div>
-
-
-
-            <label id="erreur" *ngIf="isError">{{erreur}}</label>
-            <label id="success" *ngIf="isSuccess">{{sucess}}</label>
-
-
-            <p class="divider-b"></p>
-
-            
-          </div>
-          <!--<div class="col mt-10 p-5">
-        <h5>Produit non trouvé ?</h5>
-        <button pButton type="button" label="Ajouter un produit"  class="p-button-orange" (click)="showProductAddForm()" ></button>
-
-        <!-<div>
-
-          <h5>List des  produits</h5>
-
-          <p-accordion [activeIndex]="index">
-            <p-accordionTab header="{{detail?.product?.name}} {{detail.quantity}} {{detail.unit.code}}" *ngFor="let detail of detailPurchasesForms,let i=index">
-              <div class=" p-fluid">
-                <div class="field ">
-                  <label htmlFor="product{{i}}">Produit</label>
-                  <p-dropdown [options]="products"  optionLabel="name" name="product{{i}}"  [(ngModel)]="detail.product" (ngModelChange)="changeProduct(detail.product,i)"></p-dropdown>
-                </div>
-
-                <div class="field">
-                  <label htmlFor="price{{i}}">Prix à l'unité</label>
-                  <p-inputNumber name="value{{i}}"  id="value{i}" [(ngModel)]="detail.value" [showButtons]="true" [min]="0" (ngModelChange)="changeValue(detail.value,i)" ></p-inputNumber>
-                </div>
-
-                <div class="field">
-                  <label htmlFor="quantity{{i}}">Quantité</label>
-                  <p-inputNumber name="quantity{{i}}" id="quantity{i}" [(ngModel)]="detail.quantity"  (ngModelChange)="changeValue(detail.quantity,i)" [showButtons]="true" [min]="0" ></p-inputNumber>
-                </div>
-
-                <div class="field ">
-                  <label htmlFor="unit{{i}}">Unité</label>
-                  <p-dropdown [options]="units"  optionLabel="name" name="unit{{i}}"  [(ngModel)]="detail.unit" (ngModelChange)="changeUnit(i)" ></p-dropdown>
-                </div>
-
-                <div *ngIf="detail.distinctUnit" class="field">
-                  <label htmlFor="price{{i}}">Quantité réelle : </label>
-                  <label> {{detail.realQuantity}}</label>
-                </div>
-
-                <div class="field">
-                  <label htmlFor="totalPrice{{i}}">Prix total</label>
-                  <p-inputNumber name="totalPrice{{i}}"  id="totalPrice{{i}}" [(ngModel)]="detail.totalPrice" [showButtons]="true" [min]="0"  ></p-inputNumber>
-                </div>
-
-              </div>
-            </p-accordionTab>
-
-            <div class="ml-auto btnspart  d-flex mt-1">
-              <button pButton pRipple type="button"  icon="pi pi-minus" class="col-5 p-button p-component  p-button-icon-only" (click)="RemoveLastDetail()"></button>
-              <button pButton pRipple type="button"  icon="pi pi-plus" class="ml-2 col-5 p-button p-component  p-button-icon-only" (click)="addNewDetails()"></button>
-            </div>
-          </p-accordion>
-        </div> ->
-      </div>-->
-        </form>
-
-      </div>
-    </p-dialog>
+      
+    </p-dialog> -->
 
     <p-toast position="top-center" key="tc"></p-toast>
     <p-toast key="product"></p-toast>
