--- a/src/app/pages/course/course.component.html
+++ b/src/app/pages/course/course.component.html
@@ -44,7 +44,7 @@
             <tr>
               <th pSortableColumn="reference" pColumnFilter="reference">Reference<p-sortIcon
                   field="reference"></p-sortIcon></th>
-              <th pSortableColumn="shop" pColumnFilter="shop">Boutique<p-sortIcon field="shop"></p-sortIcon></th>
+              <th pSortableColumn="shop" pColumnFilter="shop">Fournisseur<p-sortIcon field="shop"></p-sortIcon></th>
 
               <th pSortableColumn="datePurchase" pColumnFilter="datePurchase">Date Approvisionnement<p-sortIcon
                   field="datePurchase"></p-sortIcon></th>
@@ -131,7 +131,7 @@
           </div>
 
           <!--<div class="field ">
-      <label htmlFor="shop">Boutique</label>
+      <label htmlFor="shop">Fournisseur</label>
       <p-dropdown [options]="shops"  optionLabel="name" name="shop" [(ngModel)]="purchaseClicked.address.shop" ></p-dropdown>
     </div>-->
 
