--- a/src/app/pages/course/detail-course/detail-course.component.html
+++ b/src/app/pages/course/detail-course/detail-course.component.html
@@ -16,7 +16,7 @@
           </div>
   
           <div class="field col-5">
-            <label htmlFor="shop">Boutique</label>
+            <label htmlFor="shop">Fournisseur</label>
             <p-dropdown [options]="shops" [disabled]="true" optionLabel="name" name="shop" [(ngModel)]="data.shop"  >
               <ng-template let-shop pTemplate="item">
                 <div class="flex align-items-center operatingSystems-item">
