--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -16,7 +16,7 @@
           </div>
 
           <div class="field col-5">
-            <label htmlFor="shop">Boutique</label>
+            <label htmlFor="shop">Fournisseur</label>
             <p-dropdown [options]="shops" optionLabel="name" name="shop" [(ngModel)]="shop"
               (onChange)="changeShop()">
               <ng-template let-shop pTemplate="item">
